--- a/views/index.html
+++ b/views/index.html
@@ -11,8 +11,7 @@
 <html>
   <head>
     <title>Welcome to Glitch!</title>
-    <meta name="description" content="A cool thing made with Glitch">
-    <link id="favicon" rel="icon" href="https://glitch.com/edit/favicon-app.ico" type="image/x-icon">
+    <meta name="description" content="An 'whoami' micro-app">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,27 +20,24 @@
   <body>
     <header>
       <h1>
-        A Dream of the Future
+        Who am I?
       </h1>
     </header>
 
     <main>
-      <p class="bold">Oh hi,</p>
-      <p>Tell me your hopes and dreams:</p>
-      <form>
-        <input type="text" maxlength="100" placeholder="Dreams!">
-        <button type="submit">Submit</button>
-      </form>
-      <section class="dreams">
-        <ul id="dreams">
-        </ul>
-      </section>
+      <p class="bold">A 'WhoamI' micro-app</p>
+      <p>The link below, should you choose to click it, will provide you with your IP address, Software and Language identified on your computer.</p>
+      <p>
+          <a href="https://abounding-reaction.glitch.me/api/whoami">
+        'WhoamI'
+      </a>
+      </p>
     </main>
 
     <footer>
-      <a href="https://glitch.com">
+      <!--<a href="https://glitch.com">
         Remix this in Glitch
-      </a>
+      </a>-->
     </footer>
 
     <!-- Your web-app is https, so your scripts need to be too -->
