👹🐚 Checkpoint views/index.html:553280 server.js:553280 public/style.css:553280

--- a/views/index.html
+++ b/views/index.html
@@ -20,16 +20,16 @@
   <body>
     <header>
       <h1>
-        Who am I?
+       whoami?
       </h1>
     </header>
 
     <main>
-      <p class="bold">A 'WhoamI' micro-app</p>
+      <p class="bold">A 'whoami' micro-app created by jDub.</p>
       <p>The link below, should you choose to click it, will provide you with your IP address, Software and Language identified on your computer.</p>
       <p>
           <a href="https://abounding-reaction.glitch.me/api/whoami">
-        'WhoamI'
+        'whoami'
       </a>
       </p>
     </main>
